Use Math.clamp where the bounds are constant
CardPileView, PileContentOverlay and EffectPopup clamp against fixed
bounds, so Math.clamp (Java 21) reads better with no behaviour change.
EffectPopupAnimator keeps its max/min form: its upper bound depends on the
popup and window widths and can fall below the lower one, where Math.clamp
would throw.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X8JUbRCmhDC6kVwW8wEAZa